@@ -103,6 +103,7 @@ widget_class "*AgsNaviation*" style "inverse_widget"
 widget_class "*GtkMenu*" style "inverse_widget"
 widget_class "*Gtk*Scale*" style "scale_widget"
 widget_class "*Gtk*Scrollbar*" style "inverse_widget"
+widget_class "*GtkTreeView" style "inverse_widget"
 widget_class "*GtkButton*" style "inverse_widget"
 widget_class "*GtkToggleButton*" style "inverse_widget"
 widget_class "*GtkRadioButton*" style "default_widget"
